Criei uma Box e sitio para por noticias

--- a/home.html
+++ b/home.html
@@ -185,10 +185,15 @@
             </div>
 
           </div>
+          <hr>
 
             <div class="row">
               <div class="col-md-12">
                 <div class="col-md-9">
+
+                  <box>Noticia 1</box>
+                  <box>Noticia 2</box>
+                  <box>Noticia 3</box>
 
                   
 
