--- a/home.html
+++ b/home.html
@@ -193,9 +193,9 @@
                   <div class="col-md-9">
                   
 
-                    <box>Noticia 1</box>
-                    <box>Noticia 2</box>
-                    <box>Noticia 3</box>
+                    <box>Génova aciona opção de compra de Sturaro à Juventus por 16,5 ME</box>
+                    <box>Assalto deixa clube da Póvoa de Lanhoso sem chuteiras e sem bolas</box>
+                    <box>Anthony Lopes faz pausa na carreira na seleção portuguesa</box>
 
                   
 
