Add pages + update home
add pages:
about us
contact us
algum erro
regras de conducta

--- a/home.html
+++ b/home.html
@@ -225,10 +225,10 @@
             &nbsp;
                  <div class="row">
 
-                <button class="mybutton" href="">About Us</button>
-                <button class="mybutton" href="">Contact Us</button>
-                <button class="mybutton" href="">Algum Erro?</button>
-                <button class="mybutton" href=""> Regras de Conduta</button>
+                <button class="mybutton" href="about.html">About Us</button>
+                <button class="mybutton" href="contact.html">Contact Us</button>
+                <button class="mybutton" href="erro.html">Algum Erro?</button>
+                <button class="mybutton" href="regras.html"> Regras de Conduta</button>
 
                   </div>
       
