Update butoes do rodape

--- a/home.html
+++ b/home.html
@@ -225,10 +225,10 @@
             &nbsp;
                  <div class="row">
 
-                <button class="mybutton" href="about.html">About Us</button>
-                <button class="mybutton" href="contact.html">Contact Us</button>
-                <button class="mybutton" href="erro.html">Algum Erro?</button>
-                <button class="mybutton" href="regras.html"> Regras de Conduta</button>
+                <a href="about.html" class="mybutton" >About Us</a>
+                <a class="mybutton" href="contact.html">Contact Us</a>
+                <a class="mybutton" href="erro.html">Algum Erro?</a>
+                <a class="mybutton" href="regras.html"> Regras de Conduta</a>
 
                   </div>
       
