--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -42,8 +42,8 @@
                          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                           <a class="dropdown-item" href="#">All</a>
                           <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Nacional</a>
-                          <a class="dropdown-item" href="#">Internacional </a>
+                        <a class="dropdown-item" href="equipasnacional.html">Nacional</a>
+                          <a class="dropdown-item" href="equipasinternacional.html">Internacional </a>
                         </div>
                       </li>
                       <li class="nav-item dropdown">
@@ -71,9 +71,108 @@
 
 
 
+              <div style="overflow-y:scroll; height:60%"> 
+              <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th>Logo</th>
+                  <th>Team</th>
+                  <th>Division</th>
+                  <th>Region</th>
+                </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Futebol Clube do Porto</td>
+                    <td>Primeira</td>
+                    <td>Porto</td> 
+                  </tr>
+                   <tr>
+                     <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="5%"/> </td>
+                     <td>Benfica</td>
+                     <td>Primeira</td>
+                 </tr>
+                 <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Sporting</td>
+                    <td>Primeira</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Sporting</td>
+                    <td>Primeira</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Sporting</td>
+                    <td>Primeira</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Sporting</td>
+                    <td>Primeira</td>
+                  </tr>
+                  <tr>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Sporting</td>
+                    <td>Primeira</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Sporting</td>
+                    <td>Primeira</td>
+                  </tr>
+                  <tr>
+                    < <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Sporting</td>
+                    <td>Primeira</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Sporting</td>
+                    <td>Primeira</td>
+                  </tr><tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Sporting</td>
+                    <td>Primeira</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Sporting</td>
+                    <td>Primeira</td>
+                  </tr>
+                  <tr>
+                    < <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Sporting</td>
+                    <td>Primeira</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Sporting</td>
+                    <td>Primeira</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Sporting</td>
+                    <td>Primeira</td>
+                  </tr>
+                </tbody>
+                </table>
+                </div>
 
 
 
+
+
+
+
+
+
+
+
+
+            </div>
 
             <div class="col-md-1"></div>
 
