--- a/home.html
+++ b/home.html
@@ -44,8 +44,8 @@
                      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                       <a class="dropdown-item" href="#">All</a>
                       <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Nacional</a>
-                      <a class="dropdown-item" href="#">Internacional </a>
+                      <a class="dropdown-item" href="equipasnacional.html">Nacional</a> 
+                      <a class="dropdown-item" href="equipasinternacional.html">Internacional </a>
                     </div>
                   </li>
                   <li class="nav-item dropdown">
