--- a/equipasinternacional.html
+++ b/equipasinternacional.html
@@ -40,10 +40,10 @@
                            Equipas
                          </a>
                          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                          <a class="dropdown-item" href="#">All</a>
+                          <a class="dropdown-item" href="equipas.html">All</a>
                           <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Nacional</a>
-                          <a class="dropdown-item" href="#">Internacional </a>
+                        <a class="dropdown-item" href="equipasnacional.html">Nacional</a>
+                          <a class="dropdown-item" href="equipasinternacional.html">Internacional </a>
                         </div>
                       </li>
                       <li class="nav-item dropdown">
@@ -51,14 +51,14 @@
                          Competicoes
                       </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                     <a class="dropdown-item" href="#">All</a>
+                     <a class="dropdown-item" href="competicoes.html">All</a>
                      <div class="dropdown-divider"></div>
-                     <a class="dropdown-item" href="#">Primeira Liga</a>
-                     <a class="dropdown-item" href="#">UEFA Champions League</a>
+                     <a class="dropdown-item" href="primeiraliga.html">Primeira Liga</a>
+                     <a class="dropdown-item" href="uefa.html">UEFA Champions League</a>
                    </div>
                  </li>
                   <li class="nav-item">
-                      <a class="nav-link " href="#">Jogadores</a>
+                      <a class="nav-link " href="jogadores.html">Jogadores</a>
                  </li>
                </ul>
                   <form class="form-inline my-2 my-lg-0">
