--- a/home.html
+++ b/home.html
@@ -29,46 +29,46 @@
         <div class="col-md-10">
               
 
-              <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="home.html"><img src="assets/img/logo.png" style="margin-right: 4%"/>Carlos&Carlao Soccer</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
+               <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <a class="navbar-brand" href="home.html"><img src="assets/img/logo.png" style="margin-right: 4%"/>Carlos&Carlao Soccer</a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
 
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                  <ul class="navbar-nav mr-auto">
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                       Equipas
-                     </a>
-                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <a class="dropdown-item" href="#">All</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="equipasnacional.html">Nacional</a> 
-                      <a class="dropdown-item" href="equipasinternacional.html">Internacional </a>
-                    </div>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                     Competicoes
-                   </a>
-                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">All</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Primeira Liga</a>
-                    <a class="dropdown-item" href="#">UEFA Champions League</a>
-                  </div>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link " href="#">Jogadores</a>
-                </li>
-              </ul>
-              <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-              </form>
-            </div>
-          </nav>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                     <ul class="navbar-nav mr-auto">
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                           Equipas
+                         </a>
+                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                          <a class="dropdown-item" href="equipas.html">All</a>
+                          <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="equipasnacional.html">Nacional</a>
+                          <a class="dropdown-item" href="equipasinternacional.html">Internacional </a>
+                        </div>
+                      </li>
+                      <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                         Competicoes
+                      </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                     <a class="dropdown-item" href="competicoes.html">All</a>
+                     <div class="dropdown-divider"></div>
+                     <a class="dropdown-item" href="primeiraliga.html">Primeira Liga</a>
+                     <a class="dropdown-item" href="uefa.html">UEFA Champions League</a>
+                   </div>
+                 </li>
+                  <li class="nav-item">
+                      <a class="nav-link " href="jogadores.html">Jogadores</a>
+                 </li>
+               </ul>
+                  <form class="form-inline my-2 my-lg-0">
+                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                 </form>
+             </div>
+              </nav>
             &nbsp;
           
           <div class="row">
