--- a/home.html
+++ b/home.html
@@ -59,8 +59,14 @@
                     <a class="dropdown-item" href="#">UEFA Champions League</a>
                   </div>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link " href="#">Jogadores</a>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle= "dropdown" aria-haspopup="true" aria-expanded="false"> Noticias
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#">All</a>
+                    <div class="dropdown-divider"></div>
+                    <a class="dropdown-item" href="#">Mais Vistas</a>
+                    <a class="dropdown-item" href="#">Mais Recentes</a>
                 </li>
               </ul>
               <form class="form-inline my-2 my-lg-0">
@@ -188,7 +194,7 @@
             &nbsp;
             <div class="row">
               <div class="col-md-12">
-                <h1>Noticias</h1>
+                <h1>Destaques</h1>
                     &nbsp;
                 <div class="row">
                   <div class="col-md-9">
