--- a/equipasinternacional.html
+++ b/equipasinternacional.html
@@ -57,7 +57,7 @@
                      <a class="dropdown-item" href="uefa.html">UEFA Champions League</a>
                    </div>
                  </li>
-                  <li class="nav-item dropdown">
+                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle= "dropdown" aria-haspopup="true" aria-expanded="false"> Noticias
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -77,9 +77,108 @@
 
 
 
+              <div style="overflow-y:scroll; height:80%"> 
+              <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th>Logo</th>
+                  <th>Equipa</th>
+                  <th>Competição</th>
+                  <th>Pais</th>
+                </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <!--> logos=500x500 <-->
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Real Madrid</td>
+                    <td>Champions</td>
+                    <td>Espanha</td> 
+                  </tr>
+                   <tr>
+                     <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="5%"/> </td>
+                     <td>Barcelona</td>
+                     <td>Champions</td>
+                     <td>Espanha</td>
+                 </tr>
+                 <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Bayern de Múnich</td>
+                    <td>Champions</td>
+                    <td>Alemanha</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Borussia Dortmund</td>
+                    <td>Champions</td>
+                    <td>Alemanha</td>
+                  </tr>
+                  <tr>
+                      <tr>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Real Madrid</td>
+                    <td>Champions</td>
+                    <td>Espanha</td> 
+                  </tr>
+                   <tr>
+                     <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="5%"/> </td>
+                     <td>Barcelona</td>
+                     <td>Champions</td>
+                     <td>Espanha</td>
+                 </tr>
+                 <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Bayern de Múnich</td>
+                    <td>Champions</td>
+                    <td>Alemanha</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Borussia Dortmund</td>
+                    <td>Champions</td>
+                    <td>Alemanha</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Borussia Dortmund</td>
+                    <td>Champions</td>
+                    <td>Alemanha</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Borussia Dortmund</td>
+                    <td>Champions</td>
+                    <td>Alemanha</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Borussia Dortmund</td>
+                    <td>Champions</td>
+                    <td>Alemanha</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Borussia Dortmund</td>
+                    <td>Champions</td>
+                    <td>Alemanha</td>
+                  </tr>
+
+                </tbody>
+                </table>
+                </div>
 
 
 
+
+
+
+
+
+
+
+
+
+            </div>
 
             <div class="col-md-1"></div>
 
