--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -77,92 +77,85 @@
 
 
 
-              <div style="overflow-y:scroll; height:60%"> 
+              <div style="overflow-y:scroll; height:80%"> 
               <table class="table table-hover">
               <thead>
                 <tr>
                   <th>Logo</th>
-                  <th>Team</th>
-                  <th>Division</th>
-                  <th>Region</th>
+                  <th>Equipa</th>
+                  <th>Divisão</th>
+                  <th>Região</th>
                 </tr>
                 </thead>
                 <tbody>
+                  <tr>
+                    <!--> logos=500x500 <-->
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Futebol Clube do Porto</td>
+                    <td>Primeira</td>
+                    <td>Porto</td> 
+                  </tr>
                   <tr>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
                     <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
                     <td>Porto</td> 
                   </tr>
-                   <tr>
-                     <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="5%"/> </td>
-                     <td>Benfica</td>
-                     <td>Primeira</td>
-                 </tr>
-                 <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
-                    <td>Sporting</td>
-                    <td>Primeira</td>
-                  </tr>
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
-                    <td>Sporting</td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
-                  </tr>
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
-                    <td>Sporting</td>
-                    <td>Primeira</td>
-                  </tr>
-                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
-                    <td>Sporting</td>
-                    <td>Primeira</td>
+                    <td>Porto</td> 
                   </tr>
                   <tr>
                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
-                    <td>Sporting</td>
+                    <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
+                    <td>Porto</td> 
                   </tr>
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
-                    <td>Sporting</td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
+                    <td>Porto</td> 
                   </tr>
                   <tr>
-                    < <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
-                    <td>Sporting</td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
+                    <td>Porto</td> 
                   </tr>
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
-                    <td>Sporting</td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
-                  </tr><tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
-                    <td>Sporting</td>
-                    <td>Primeira</td>
+                    <td>Porto</td> 
                   </tr>
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
-                    <td>Sporting</td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
+                    <td>Porto</td> 
                   </tr>
                   <tr>
-                    < <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
-                    <td>Sporting</td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
+                    <td>Porto</td> 
                   </tr>
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
-                    <td>Sporting</td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
+                    <td>Porto</td> 
                   </tr>
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
-                    <td>Sporting</td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
+                    <td>Porto</td> 
                   </tr>
+
                 </tbody>
                 </table>
                 </div>
