--- a/primeiraliga.html
+++ b/primeiraliga.html
@@ -69,15 +69,12 @@
               </nav>
             &nbsp;
               
-            <h2>Competições</h2>
 
-            <div class="col-md-3">
-              <img src="assets/img/LigaNOS.png" alt="Trulli" width="500" height="333">
+            <div class="row">
+            <div class="col-md-2">
+              <img src="assets/img/LigaNOS.png" width="60%" >
             </div>
-
-
-            
-            <div class="col-md-1"></div>
+            <div class="col-md-10"></div>
 
         </div>
 
