--- a/competicoes.html
+++ b/competicoes.html
@@ -83,7 +83,7 @@
 
               
               <table class="table table-hover">
-              <thead>
+              <thead  style="background-color: #e6e600;">
                 <tr>
                   <th>Logo</th>
                   <th>Equipa</th>
@@ -122,7 +122,7 @@
                       <div class="col-md-6">
                         <h3>Grupo A</h3>
                          <table class="table table-hover">
-              <thead>
+              <thead style="background-color:  #bfbfbf;">
                 <tr>
                   <th>Logo</th>
                   <th>Equipa</th>
@@ -155,7 +155,7 @@
                       <div class="col-md-6">
                         <h3>Grupo B</h3>
                          <table class="table table-hover">
-              <thead>
+              <thead  style="background-color:  #bfbfbf">
                 <tr>
                   <th>Logo</th>
                   <th>Equipa</th>
@@ -191,7 +191,7 @@
                       <div class="col-md-6">
                         <h3>Grupo C</h3>
                          <table class="table table-hover">
-              <thead>
+              <thead style="background-color:  #bfbfbf">
                 <tr>
                   <th>Logo</th>
                   <th>Equipa</th>
@@ -224,7 +224,7 @@
                       <div class="col-md-6">
                         <h3>Grupo D</h3>
                          <table class="table table-hover">
-              <thead>
+              <thead style="background-color:  #bfbfbf">
                 <tr>
                   <th>Logo</th>
                   <th>Equipa</th>
@@ -260,7 +260,7 @@
                       <div class="col-md-6">
                         <h3>Grupo E</h3>
                          <table class="table table-hover">
-              <thead>
+              <thead style="background-color:  #bfbfbf">
                 <tr>
                   <th>Logo</th>
                   <th>Equipa</th>
@@ -293,7 +293,7 @@
                       <div class="col-md-6">
                         <h3>Grupo F</h3>
                          <table class="table table-hover">
-              <thead>
+              <thead style="background-color:  #bfbfbf">
                 <tr>
                   <th>Logo</th>
                   <th>Equipa</th>
@@ -329,7 +329,7 @@
                       <div class="col-md-6">
                         <h3>Grupo G</h3>
                          <table class="table table-hover">
-              <thead>
+              <thead style="background-color:  #bfbfbf">
                 <tr>
                   <th>Logo</th>
                   <th>Equipa</th>
@@ -362,7 +362,7 @@
                       <div class="col-md-6">
                         <h3>Grupo H</h3>
                          <table class="table table-hover">
-              <thead>
+              <thead style="background-color:  #bfbfbf">
                 <tr>
                   <th>Logo</th>
                   <th>Equipa</th>
