Update Tables (logos fix) Todas as Paginas de Equipas

--- a/equipasinternacional.html
+++ b/equipasinternacional.html
@@ -90,74 +90,74 @@
                 <tbody>
                   <tr>
                     <!--> logos=500x500 <-->
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Real Madrid</td>
                     <td>Champions</td>
                     <td>Espanha</td> 
                   </tr>
                    <tr>
-                     <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="5%"/> </td>
+                     <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="50" height="50"/> </td>
                      <td>Barcelona</td>
                      <td>Champions</td>
                      <td>Espanha</td>
                  </tr>
                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Bayern de Múnich</td>
                     <td>Champions</td>
                     <td>Alemanha</td>
                   </tr>
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Borussia Dortmund</td>
                     <td>Champions</td>
                     <td>Alemanha</td>
                   </tr>
                   <tr>
                       <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Real Madrid</td>
                     <td>Champions</td>
                     <td>Espanha</td> 
                   </tr>
                    <tr>
-                     <td><img src="https://upload.wikimedia.org/wikipedia/pt/f/f0/500px-SL_Benfica_logo_svg.png" width="5%"/> </td>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                      <td>Barcelona</td>
                      <td>Champions</td>
                      <td>Espanha</td>
                  </tr>
                  <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Bayern de Múnich</td>
                     <td>Champions</td>
                     <td>Alemanha</td>
                   </tr>
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/> </td>
                     <td>Borussia Dortmund</td>
                     <td>Champions</td>
                     <td>Alemanha</td>
                   </tr>
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Borussia Dortmund</td>
                     <td>Champions</td>
                     <td>Alemanha</td>
                   </tr>
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Borussia Dortmund</td>
                     <td>Champions</td>
                     <td>Alemanha</td>
                   </tr>
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/> </td>
                     <td>Borussia Dortmund</td>
                     <td>Champions</td>
                     <td>Alemanha</td>
                   </tr>
                   <tr>
-                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Borussia Dortmund</td>
                     <td>Champions</td>
                     <td>Alemanha</td>
