--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -90,67 +90,67 @@
                 <tbody>
                   <tr>
                     <!--> logos=500x500 <-->
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
                     <td>Porto</td> 
                   </tr>
                   <tr>
-                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="5%"/> </td>
+                    <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Futebol Clube do Porto</td>
                     <td>Primeira</td>
                     <td>Porto</td> 
