--- a/competicoes.html
+++ b/competicoes.html
@@ -51,7 +51,7 @@
                          Competicoes
                       </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                     <a class="dropdown-item" href="competicoes.html">All</a>
+                     <a class="dropdown-item" href="competicoes.html">Resumo</a>
                      <div class="dropdown-divider"></div>
                      <a class="dropdown-item" href="primeiraliga.html">Primeira Liga</a>
                      <a class="dropdown-item" href="uefa.html">UEFA Champions League</a>
@@ -75,7 +75,7 @@
               </nav>
             &nbsp;
 
-            <h1>Competições</h1>
+            <h1>Resumo</h1>
             &nbsp;
             <div class="row">
                 <div class="col-md-6">
@@ -112,6 +112,61 @@
                     <td>3º</td>
                     <td>75</td>
                   </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png"  width="50" height="50"/> </td>
+                    <td>SC Sporting</td>
+                    <td>4º</td>
+                    <td>75</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png"  width="50" height="50"/> </td>
+                    <td>SC Sporting</td>
+                    <td>5º</td>
+                    <td>75</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png"  width="50" height="50"/> </td>
+                    <td>SC Sporting</td>
+                    <td>6º</td>
+                    <td>75</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png"  width="50" height="50"/> </td>
+                    <td>SC Sporting</td>
+                    <td>7º</td>
+                    <td>75</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png"  width="50" height="50"/> </td>
+                    <td>SC Sporting</td>
+                    <td>8º</td>
+                    <td>75</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png"  width="50" height="50"/> </td>
+                    <td>SC Sporting</td>
+                    <td>9º</td>
+                    <td>75</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png"  width="50" height="50"/> </td>
+                    <td>SC Sporting</td>
+                    <td>10º</td>
+                    <td>75</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png"  width="50" height="50"/> </td>
+                    <td>SC Sporting</td>
+                    <td>11º</td>
+                    <td>75</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png"  width="50" height="50"/> </td>
+                    <td>SC Sporting</td>
+                    <td>12º</td>
+                    <td>75</td>
+                  </tr>
+                  
                    </tbody>
                 </table>
 
