--- a/equipasnacional.html
+++ b/equipasnacional.html
@@ -51,7 +51,7 @@
                          Competicoes
                       </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                     <a class="dropdown-item" href="competicoes.html">All</a>
+                     <a class="dropdown-item" href="competicoes.html">Resumo</a>
                      <div class="dropdown-divider"></div>
                      <a class="dropdown-item" href="primeiraliga.html">Primeira Liga</a>
                      <a class="dropdown-item" href="uefa.html">UEFA Champions League</a>
@@ -77,7 +77,7 @@
 
 
 
-              <div style="overflow-y:scroll; height:80%"> 
+              <div style="overflow-y:scroll; height:800px"> 
               <table class="table table-hover">
               <thead>
                 <tr>
