--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
                          Competicoes
                       </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                     <a class="dropdown-item" href="competicoes.html">All</a>
+                     <a class="dropdown-item" href="competicoes.html">Resumo</a>
                      <div class="dropdown-divider"></div>
                      <a class="dropdown-item" href="primeiraliga.html">Primeira Liga</a>
                      <a class="dropdown-item" href="uefa.html">UEFA Champions League</a>
