--- a/plantel.html
+++ b/plantel.html
@@ -76,6 +76,32 @@
             &nbsp;
 
 
+            <div class="row">
+              <div class="col-md-3">
+                <img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="100%"/>
+              </div>
+              <div class="col-md-3">
+                <h2>Futebol Clube do Porto</h2>
+              </div>
+              <div class="col-md-3">
+                <div class="row">
+                <h1>Classificações:</h1>
+                <div class="col-md-6">
+                  <h3>Primeira Liga</h3>
+                </div>
+                <div class="col-md-6">
+                  <h3>Champions League</h3>
+                </div>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <h1>Próximos Jogos</h1>
+              </div>
+            </div>
+
+            
+
+
 
 
 
