--- a/primeiraliga.html
+++ b/primeiraliga.html
@@ -51,7 +51,7 @@
                          Competicoes
                       </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                     <a class="dropdown-item" href="competicoes.html">All</a>
+                     <a class="dropdown-item" href="competicoes.html">Resumo</a>
                      <div class="dropdown-divider"></div>
                      <a class="dropdown-item" href="primeiraliga.html">Primeira Liga</a>
                      <a class="dropdown-item" href="uefa.html">UEFA Champions League</a>
@@ -85,7 +85,7 @@
               &nbsp;
               <h5>19ª Jornada</h5>
 
-              <div style="overflow-y:scroll; height:12%"> 
+              <div style="overflow-y:scroll ; height:270px"> 
               <table class="table table-hover" >
               <thead style="background-color : #e6e600">
                 <tr>
@@ -154,11 +154,14 @@
                 </table>
                 </div>
 
+            </div>
+            </div>
+
                 &nbsp;
                 <h2>Classificação</h2>
                 &nbsp;
 
-                <div style="overflow-y:scroll; height:30%;"> 
+                <div style="overflow-y:scroll; height:350px;"> 
               <table class="table table-hover" >
           
               <thead style="background-color : #e6e600">
