--- a/uefa.html
+++ b/uefa.html
@@ -51,7 +51,7 @@
                          Competicoes
                       </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                     <a class="dropdown-item" href="competicoes.html">All</a>
+                     <a class="dropdown-item" href="competicoes.html">Resumo</a>
                      <div class="dropdown-divider"></div>
                      <a class="dropdown-item" href="primeiraliga.html">Primeira Liga</a>
                      <a class="dropdown-item" href="uefa.html">UEFA Champions League</a>
@@ -85,7 +85,7 @@
               &nbsp;
               <h5>Oitavos de Final</h5>
 
-              <div style="overflow-y:scroll; height:50%"> 
+              <div style="overflow-y:scroll; height:190px"> 
               <table class="table table-hover" >
               <thead style="background-color : #bfbfbf">
                 <tr>
