--- a/equipas.html
+++ b/equipas.html
@@ -77,7 +77,7 @@
 
 
 
-              <div style="overflow-y:scroll; height:80%"> 
+              <div style="overflow-y:scroll; height:800px"> 
               <table class="table table-hover">
               <thead>
                 <tr>
@@ -129,6 +129,12 @@
                  <tr>
                      <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
                     <td>Bayern de Múnich</td>
+                    <td>Champions</td>
+                    <td>Alemanha</td>
+                  </tr>
+                  <tr>
+                     <td><img src="https://clipart.info/images/ccovers/1503438063porto-logo-png.png" width="50" height="50"/></td>
+                    <td>Borussia Dortmund</td>
                     <td>Champions</td>
                     <td>Alemanha</td>
                   </tr>
