--- a/equipasinternacional.html
+++ b/equipasinternacional.html
@@ -201,6 +201,7 @@
         <!-- Bootstrap core JavaScript
           ================================================== -->
           <!-- Placed at the end of the document so the pages load faster -->
+          <script src="js/javascript.js"></script>
           <script src="assets/js/jquery.min.js"></script>
           <script src="bootstrap/js/bootstrap.min.js"></script>
           <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
