--- a/plantel.html
+++ b/plantel.html
@@ -122,24 +122,87 @@
                       <tbody>
                         <tr>
                           <td>Guarda Redes</td>
-                          <td>Paulo</td>
-                          <td>Portugues</td>
-                          <td>19</td>
-                          <td>169 cm</td>
-                        </tr>
+                          <td>Iker Casillas</td>
+                          <td>Espanhol</td>
+                          <td>37</td>
+                          <td>185 cm</td>
+                        </tr> 
                         <tr>
-                          <td> Avançado</td>
-                          <td>Areias</td>
-                          <td>Portugues</td>
-                          <td>22</td>
-                          <td>169 cm</td>
+                          <td>Guarda Redes</td>
+                          <td>Vaná</td>
+                          <td>Brasileiro</td>
+                          <td>27</td>
+                          <td>195 cm</td>
+                        </tr>
+                         <tr>
+                          <td>Guarda Redes</td>
+                          <td>Diogo Costa</td>
+                          <td>Português</td>
+                          <td>19</td>
+                          <td>187 cm</td>
+                        </tr>
+                          <tr>
+                          <td>Guarda Redes</td>
+                          <td>Fabiano</td>
+                          <td>Brasileiro</td>
+                          <td>30</td>
+                          <td>197 cm</td>
                         </tr>
                         <tr>
                           <td>Defesa</td>
-                          <td>Carlos</td>
-                          <td>Portugues</td>
+                          <td>Maxi Pereira</td>
+                          <td>Uruguaio</td>
+                          <td>34</td>
+                          <td>173 cm</td>
+                        </tr>
+                        <tr>
+                          <td>Defesa</td>
+                          <td>Éder Militão</td>
+                          <td>Brasileiro</td>
+                          <td>21</td>
+                          <td>187 cm</td>
+                        </tr>
+                         <tr>
+                          <td>Defesa</td>
+                          <td>Diogo Leite</td>
+                          <td>Português</td>
                           <td>20</td>
-                          <td>180 cm</td>
+                          <td>188 cm</td>
+                        </tr>
+                         <tr>
+                          <td>Defesa</td>
+                          <td>Wilson Manadá</td>
+                          <td>Português</td>
+                          <td>24</td>
+                          <td>173 cm</td>
+                        </tr>
+                         <tr>
+                          <td>Defesa</td>
+                          <td>Alex Teles</td>
+                          <td>Italiano/Brasileiro</td>
+                          <td>26</td>
+                          <td>181 cm</td>
+                        </tr>
+                           <tr>
+                          <td>Defesa</td>
+                          <td>Jorge</td>
+                          <td>Brasileiro</td>
+                          <td>22</td>
+                          <td>184 cm</td>
+                        </tr>
+                           <tr>
+                          <td>Defesa</td>
+                          <td>Mbemba</td>
+                          <td>congolês</td>
+                          <td>24</td>
+                          <td>182 cm</td>
+                        </tr>
+                           <tr>
+                          <td>Defesa</td>
+                          <td>João Pedro</td>
+                          <td>Brasileiro</td>
+                          <td>22</td>
+                          <td>179 cm</td>
                         </tr>
                        <tr>
                           <td>Sub</td>
