--- a/plantel.html
+++ b/plantel.html
@@ -179,7 +179,7 @@
                          <tr>
                           <td>Defesa</td>
                           <td>Alex Teles</td>
-                          <td>Italiano/Brasileiro</td>
+                          <td>Brasileiro</td>
                           <td>26</td>
                           <td>181 cm</td>
                         </tr>
@@ -204,6 +204,135 @@
                           <td>22</td>
                           <td>179 cm</td>
                         </tr>
+                          </tr>
+                           <tr>
+                          <td>Defesa</td>
+                          <td>Felipe</td>
+                          <td>Brasileiro</td>
+                          <td>29</td>
+                          <td>190 cm</td>
+                        </tr>
+                          </tr>
+                           <tr>
+                          <td>Defesa</td>
+                          <td>Pepe</td>
+                          <td>Português</td>
+                          <td>35</td>
+                          <td>188 cm</td>
+                        </tr>
+                        <tr>
+                          <td>Médio</td>
+                          <td>Bruno Costa</td>
+                          <td>Português</td>
+                          <td>21</td>
+                          <td>170 cm</td>
+                        </tr>
+                               <tr>
+                          <td>Médio</td>
+                          <td>Óliver Torres</td>
+                          <td>Espanhol</td>
+                          <td>24</td>
+                          <td>175 cm</td>
+                        </tr>
+                               <tr>
+                          <td>Médio</td>
+                          <td>Mamadou Loum</td>
+                          <td>Senegalês</td>
+                          <td>22</td>
+                          <td>188 cm</td>
+                        </tr>
+                               <tr>
+                          <td>Médio</td>
+                          <td>Herrera</td>
+                          <td>Mexicano</td>
+                          <td>28</td>
+                          <td>183 cm</td>
+                        </tr>
+                               <tr>
+                          <td>Médio</td>
+                          <td>Danilo Pereira</td>
+                          <td>Português</td>
+                          <td>27</td>
+                          <td>188 cm</td>
+                        </tr>
+                               <tr>
+                          <td>Médio</td>
+                          <td>Otávio</td>
+                          <td>Brasileiro</td>
+                          <td>24</td>
+                          <td>171 cm</td>
+                        </tr>
+                               <tr>
+                          <td>Avançado</td>
+                          <td>Hernâni</td>
+                          <td>Português</td>
+                          <td>27</td>
+                          <td>180 cm</td>
+                        </tr>
+                               <tr>
+                          <td>Avançado</td>
+                          <td>Brahimi</td>
+                          <td>Argelino</td>
+                          <td>29</td>
+                          <td>175 cm</td>
+                        </tr>
+                         <tr>
+                          <td>Avançado</td>
+                          <td>Aboubakar</td>
+                          <td>Camaronês</td>
+                          <td>27</td>
+                          <td>184 cm</td>
+                        </tr>
+                         <tr>
+                          <td>Avançado</td>
+                          <td>Marega</td>
+                          <td>Malinês </td>
+                          <td>27</td>
+                          <td>183 cm</td>
+                        </tr>
+                           <tr>
+                          <td>Avançado</td>
+                          <td>Marius</td>
+                          <td>Chadiano</td>
+                          <td>21</td>
+                          <td>182 cm</td>
+                        </tr>
+                           <tr>
+                          <td>Avançado</td>
+                          <td>Jesús Corona</td>
+                          <td>Mexicano</td>
+                          <td>26</td>
+                          <td>174 cm</td>
+                        </tr>
+                           <tr>
+                          <td>Avançado</td>
+                          <td>Adrian López</td>
+                          <td>Espanhol</td>
+                          <td>31</td>
+                          <td>183 cm</td>
+                        </tr>
+                           <tr>
+                          <td>Avançado</td>
+                          <td>André Pereira</td>
+                          <td>Português</td>
+                          <td>23</td>
+                          <td>188 cm</td>
+                        </tr>
+                           <tr>
+                          <td>Avançado</td>
+                          <td>Soares</td>
+                          <td>Brasileiro</td>
+                          <td>28</td>
+                          <td>187 cm</td>
+                        </tr>
+                          <tr>
+                          <td>Avançado</td>
+                          <td>Fernando Andrade</td>
+                          <td>Brasileiro</td>
+                          <td>26</td>
+                          <td>182 cm</td>
+                        </tr>
+                        
                        <tr>
                           <td>Sub</td>
                           <td>Jose</td>
