--- a/plantel.html
+++ b/plantel.html
@@ -332,13 +332,40 @@
                           <td>26</td>
                           <td>182 cm</td>
                         </tr>
-                        
-                       <tr>
-                          <td>Sub</td>
-                          <td>Jose</td>
+                         <tr>
+                          <td>Treinador</td>
+                          <td>Sérgio Conceição</td>
                           <td>Portugues</td>
-                          <td>22</td>
-                          <td>150 cm</td>
+                          <td>44</td>
+                          <td>177 cm</td>
+                        </tr>
+                        <tr>
+                          <td>Treinador Adjunto</td>
+                          <td>Vitor Bruno</td>
+                          <td>Portugues</td>
+                          <td>36</td>
+                          <td>___ cm</td>
+                        </tr>
+                        <tr>
+                          <td>Treinador Adjunto</td>
+                          <td>Siramana Dembelé</td>
+                          <td>Francês</td>
+                          <td>42</td>
+                          <td>170 cm</td>
+                        </tr>
+                         <tr>
+                          <td>Treinador De Guarda-Redes</td>
+                          <td>Diamantino Figueiredo</td>
+                          <td>Francês</td>
+                          <td>58</td>
+                          <td>___ cm</td>
+                        </tr>
+                         <tr>
+                          <td>Fisiologista</td>
+                          <td>Eduardo Oliveira</td>
+                          <td>Francês</td>
+                          <td>41</td>
+                          <td>___ cm</td>
                         </tr>
                         
                         </tbody>
